--- a/goodbye/app/views/layouts/application.html.erb
+++ b/goodbye/app/views/layouts/application.html.erb
@@ -2,6 +2,10 @@
 <html>
   <head>
     <title>Goodbye</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -10,6 +14,16 @@
   </head>
 
   <body>
-    <%= yield %>
+    <section class="section">
+      <div class="container">
+        <div class="columns">
+          <div class="column is-8-desktop is-offset-2-desktop">
+            <div class="content">
+              <%= yield %>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
